--- a/blog-single.html
+++ b/blog-single.html
@@ -5,10 +5,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<!-- Las 3 metaetiquetas anteriores * deben * ir primero en la cabeza; cualquier otro contenido principal debe venir * después * de estas etiquetas -->
 	
-	<title>Opyr Blog</title>
+	<title>Neig'yGroup // Blog</title>
 
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round" rel="stylesheet">
@@ -29,12 +28,6 @@
 	<!-- Custom stlylesheet -->
 	<link type="text/css" rel="stylesheet" href="css/style.css" />
 
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	<![endif]-->
 </head>
 
 <body>
@@ -50,7 +43,7 @@
 					<!-- Logo -->
 					<div class="navbar-brand">
 						<a href="index.html">
-							<img class="logo" src="img/LogoOpyrCl.png" alt="logo">
+							<img class="logo" src="./img/logo-nuevo.png" alt="logo">
 						</a>
 					</div>
 					<!-- /Logo -->
@@ -68,11 +61,11 @@
 					<li><a href="index.html#about">About</a></li>
 					<li><a href="index.html#portfolio">Productos</a></li>
 					<li><a href="index.html#service">Servicios</a></li>
-					<li><a href="index.html#pricing">Calidad</a></li>
-					<li><a href="index.html#team">Distribuidores</a></li>
-					<li class="has-dropdown"><a>Blog</a>
+					<!-- <li><a href="index.html#pricing">Calidad</a></li>
+					<li><a href="index.html#team">Distribuidores</a></li> -->
+					<li class="has-dropdown"><a>Proyectos</a>
 						<ul class="dropdown">
-							<li><a href="#">blog post</a></li>
+							<li><a href="#">Blog</a></li>
 						</ul>
 					</li>
 					<li><a href="index.html#contact">Contacto</a></li>
@@ -116,23 +109,25 @@
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
-								<li><i class="fa fa-user"></i>Info-Tec Opyr</li>
-								<li><i class="fa fa-clock-o"></i>18 Set</li>
-								<li><i class="fa fa-comments"></i>57</li>
+								<li><i class="fa fa-user"></i>Daniel Neira</li>
+								<li><i class="fa fa-clock-o"></i>Set 2017</li>
+								<li><i class="fa fa-comments"></i>+54 9 3544 581118</li>
 							</ul>
-							<h3>Morbi mattis felis at nunc. Duis viverra</h3>
-							<p>Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi.</p>
+							<h3>Control de Estacionamiento Ciudadano</h3>
+							<p>OBJETIVO:
+								1.-Obtener una aplicación para móviles ágil, eficiente y eficaz para el control tarifado de estacionamiento, con beneficios económicos para los municipios y los propios trabajadores, fundamentalmente éstos últimos, los eslabones más débiles de la cadena.
+								2.-Generar más puestos de trabajo legal para los denominados “naranjitas” al ampliar las zonas permitidas de estacionamiento, llevando el sistema tarifada aún donde actualmente no se está cobrando por estacionamiento, evitando la corrupción de las actuales mafias que actualmente gobiernan a estos trabajadores. Literalmente, puede ampliarse el cobro de estacionamiento en todas y cada una de las calles de las Ciudades, con el objetivo de generar puestos de trabajo en este rubro. En principio, cada trabajador podrá cubrir 2 cuadras lineales ó en ángulo, no más de ello, con la característica de que obligatoriamente cada 3 meses se producirán rotaciones aleatoriamente, para democratizar la actividad (así si un trabajador está disconforme con las 2 cuadras que le toca controlar, a los 3 meses se asegurará por rotación aleatoria de los lugares – mediante bolillero o método similar – otro lugar de trabajo, que será donde la suerte lo envíe).</p>
 						</div>
 
 						<!-- blog tags -->
 						<div class="blog-tags">
 							<h5>Tags :</h5>
-							<a href="#"><i class="fa fa-tag"></i>Web</a>
-							<a href="#"><i class="fa fa-tag"></i>Laboratorio</a>
-							<a href="#"><i class="fa fa-tag"></i>Calibres</a>
-							<a href="#"><i class="fa fa-tag"></i>partículas</a>
-							<a href="#"><i class="fa fa-tag"></i>virus</a>
-							<a href="#"><i class="fa fa-tag"></i>Farmacia</a>
+							<a href="#"><i class="fa fa-tag"></i>estacionamiento</a>
+							<a href="#"><i class="fa fa-tag"></i>calles</a>
+							<a href="#"><i class="fa fa-tag"></i>seguridad</a>
+							<a href="#"><i class="fa fa-tag"></i>naranjitas</a>
+							<a href="#"><i class="fa fa-tag"></i>trapitos</a>
+							<a href="#"><i class="fa fa-tag"></i>autos</a>
 						</div>
 						<!-- blog tags -->
 
@@ -144,12 +139,12 @@
 								</div>
 								<div class="media-body">
 									<div class="media-heading">
-										<h3>Opyr</h3>
+										<h3>Neig'yGroup</h3>
 										<div class="author-social">
-											<a href="#"><i class="fa fa-facebook"></i></a>
+											<!-- <a href="#"><i class="fa fa-facebook"></i></a>
 											<a href="#"><i class="fa fa-twitter"></i></a>
 											<a href="#"><i class="fa fa-google-plus"></i></a>
-											<a href="#"><i class="fa fa-instagram"></i></a>
+											<a href="#"><i class="fa fa-instagram"></i></a> -->
 										</div>
 									</div>
 									<p>Nec feugiat nisl pretium fusce id velit ut tortor pretium. Nisl purus in mollis nunc sed. Nunc non blandit massa enim nec.</p>
@@ -161,33 +156,40 @@
 						<!-- blog comments -->
 						<!-- News Card-->
 						<div class="news-card">
-							<div><img src="img/blog1.png" alt="News 1">
+							<div><img src="img/blog/blog1.jpg" alt="News 1">
 								<p></p>
-								<h3>Contadores de Partículas.</h3>
+								<h3>Seguridad Ciudadana.</h3>
+								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In necessitatibus assumenda temporibus asperiores repellat dolor dolorum adipisci? Officiis, consequatur maxime?</p>
+								<a href="#miModal">Learn More <i class="fa fa-angle-double-right"></i> </a>
+							</div>
+							<div><img src="img/blog/blog2.jpg" alt="News 1">
+								<p></p>
+								<h3>Sistema Capicop.</h3>
 								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In necessitatibus assumenda temporibus asperiores repellat dolor dolorum adipisci? Officiis, consequatur maxime?</p>
 								<a href="#">Learn More <i class="fa fa-angle-double-right"></i> </a>
 							</div>
-							<div><img src="img/blog2.png" alt="News 1">
+							<div><img src="img/blog/blog3.jpg" alt="News 1">
 								<p></p>
-								<h3>Contadores de partículas - Calibración.</h3>
+								<h3> Nuevo Paradigma Sobre Enonomías Regionales.</h3>
 								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In necessitatibus assumenda temporibus asperiores repellat dolor dolorum adipisci? Officiis, consequatur maxime?</p>
 								<a href="#">Learn More <i class="fa fa-angle-double-right"></i> </a>
 							</div>
-							<div><img src="img/blog3.png" alt="News 1">
+							<div><img src="img/blog/blog4.jpg" alt="News 1">
 								<p></p>
-								<h3>Recomendaciones.</h3>
-								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In necessitatibus assumenda temporibus asperiores repellat dolor dolorum adipisci? Officiis, consequatur maxime?</p>
-								<a href="#">Learn More <i class="fa fa-angle-double-right"></i> </a>
-							</div>
-							<div><img src="img/blog4.png" alt="News 1">
-								<p></p>
-								<h3>Partículas Visibles y No Visibles.</h3>
+								<h3>Normativa para Camiones robotizados.</h3>
 								<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In necessitatibus assumenda temporibus asperiores repellat dolor dolorum adipisci? Officiis, consequatur maxime?</p>
 								<a href="#">Learn More <i class="fa fa-angle-double-right"></i> </a>
 							</div>
 						</div>
 						<!-- News Card-->
 						
+						<div id="miModal" class="modal">
+							<div class="modal-contenido">
+							  <a href="#">X</a>
+							  <h2>Mi primer Modal</h2>
+							  <p>Este es mi primera ventana modal sin utilizar JavaScript.</p>
+							</div>  
+						</div>
 						<!-- Pie divisorio -->
 						<div id ="numbers" class="section sm-padding">
 							<!-- Background Image -->
@@ -270,11 +272,18 @@
 					<div class="widget">
 						<h3 class="title">Categorias</h3>
 						<div class="widget-category">
-							<a href="#">Laboratorio<span>(1)</span></a>
-							<a href="#">Mantenimiento y Calibración de Equipos<span>(142)</span></a>
-							<a href="#">Capacitaciones<span>(1)</span></a>
-							<a href="#">Servicios<span>(1)</span></a>
-							<a href="#">Eventos<span>(1)</span></a>
+							<a href="#">(A) Seguridad Ciudadana<span>(1)</span></a>
+							<a href="#">(B) En Gestión/Desarrollo<span>(2)</span></a>
+							<a href="#">(b.1.) Gob. Nac./Prov./Mun.<span>(1)</span></a>
+							<a href="#">(b.1.1.) Sistema Capicop.<span>(1)</span></a>
+							<a href="#">(b.1.2.) Nuevo Paradigma Sobre Enonomías Regionales.<span>(1)</span></a>
+							<a href="#">(b.2.) Normativa para Camiones robotizados.<span>(1)</span></a>
+							<a href="#">(b.3.) Ley de Conducción de Motovehículos.<span>(1)</span></a>
+							<a href="#">(C) SoftWare / App / Aelectrónica<span>(1)</span></a>
+							<a href="#">(c.1.) Solución para el Reciclado de Residuos Urbanos.<span>(1)</span></a>
+							<a href="#">(c.2.) Solución Estacionamiento - Naranjitas/Trapitos -<span>(1)</span></a>
+							<a href="#">(c.3.) 6G y 7G. Medios de transmisión Laser.<span>(1)</span></a>
+							<a href="#">(c.4) Sistema para evitar demoras Bancarias / AntiHackers.<span>(1)</span></a>
 						</div>
 					</div>
 					<!-- /Category -->
@@ -309,7 +318,7 @@
 						<!-- single post -->
 						<div class="widget-post">
 							<a href="#">
-								<img src="./img/blog3.png" alt=""> Título Corto
+								<img src="./img/blog/blog3.jpg" alt=""> Título Corto
 							</a>
 							<ul class="blog-meta">
 								<li>Oct 18, 2017</li>
@@ -324,13 +333,13 @@
 					<div class="widget">
 						<h3 class="title">Tags</h3>
 						<div class="widget-tags">
-							<a href="#">Web</a>
-							<a href="#">Laboratorio</a>
-							<a href="#">Calibres</a>
-							<a href="#">Calidad</a>
-							<a href="#">particulas</a>
-							<a href="#">Virus</a>
-							<a href="#">Farmacia</a>
+							<a href="#">Seguridad</a>
+							<a href="#">ciudadanos</a>
+							<a href="#">Estacionamiento</a>
+							<a href="#">5G</a>
+							<a href="#">laser</a>
+							<a href="#">Redes</a>
+							<a href="#">Negocios</a>
 						</div>
 					</div>
 					<!-- /Tags -->
@@ -360,19 +369,19 @@
 
 					<!-- footer logo -->
 					<div class="footer-logo">
-						<a href="index.html"><img src="img/LogoOpyrCl.png" alt="logo"></a>
+						<a href="index.html"><img src="img/logo-nuevo.png" alt="logo"></a>
 					</div>
 					<!-- /footer logo -->
 
 					<!-- footer follow -->
-					<ul class="footer-follow">
+					<!-- <ul class="footer-follow">
 						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 						<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 						<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 						<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 						<li><a href="#"><i class="fa fa-youtube"></i></a></li>
-					</ul>
+					</ul> -->
 					<!-- /footer follow -->
 
 					<!-- footer copyright -->
@@ -395,7 +404,7 @@
 	<!-- Back to top -->
 	<div id="back-to-top"></div>
 	<!-- /Back to top -->
-
+	
 	<!-- Preloader -->
 	<div id="preloader">
 		<div class="preloader">
@@ -406,7 +415,7 @@
 		</div>
 	</div>
 	<!-- /Preloader -->
-
+	
 	<!-- jQuery Plugins -->
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -415,5 +424,6 @@
 	<script type="text/javascript" src="js/main.js"></script>
 
 </body>
+
 
 </html>
