--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 	<title>NeigyGroup - Empresa de Seguridad</title>
 
+	<meta name="description" content="Sistemas de Seguridad y Video Vigilancia para comercios, empresas y casas de Familia. Porque la Seguridad es tan importante para ustedes como para nuetra empresa.">
+	
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round" rel="stylesheet">
 
@@ -40,7 +42,7 @@
 	<!-- Header -->
 	<header id="home">
 		<!-- Background Image -->
-		<div class="bg-img" style="background-image: url('./img/background4.jpg');">
+		<div class="bg-img" style="background-image: url('./img/background5.jpg');">
 			<div class="overlay"></div>
 		</div>
 		<!-- /Background Image -->
@@ -72,13 +74,13 @@
 					<li><a href="#about">About</a></li>
 					<li><a href="#portfolio">Productos</a></li>
 					<li><a href="#service">Servicios</a></li>
-					<li><a href="#Calidad">Calidad</a></li>
-					<li><a href="#features">Distribuidores</a></li>
-					<!-- <li class="has-dropdown"><a href="#blog">Blog</a>
+					<!-- <li><a href="#Calidad">Calidad</a></li>
+					<li><a href="#features">Distribuidores</a></li> -->
+					<li class="has-dropdown"><a href="#blog">Proyectos</a>
 						<ul class="dropdown">
-							<li><a href="blog-single.html">blog post</a></li>
+							<li><a href="blog-single.html">Blog</a></li>
 						</ul>
-					</li> -->
+					</li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
 				<!-- /Main navigation -->
@@ -96,8 +98,11 @@
 					<div class="col-md-10 col-md-offset-1">
 						<div class="home-content">
 							<img class="logo" src="img/logo-nuevo.png" alt="logo"><img>
-							<h1 class="white-text">NeigyGroup</h1>
-							<p class="white-text">Empresa de Seguridad y Video Vigilancia.</p>
+							<h1 class="white-text">Neig'yGroup</h1>
+							<p class="white-text">El Futuro, hoy.</p>
+							<h3>SINERGIA SIMBIÓTICA ENTRE NOSOTROS, 
+								GOBIERNOS/EMPRESAS
+							</h3>
 							<!-- <button class="white-btn">Get Started!</button>
 							<button class="main-btn">Learn more</button> -->
 						</div>
@@ -513,14 +518,14 @@
 				<!-- /Section header -->
 
 				<!-- blog -->
-				<div class="col-md-4">
+				<div class="col-md-9">
 					<div class="blog">
 						<div class="blog-img">
 							<img class="img-responsive" src="./img/clientes/blog1.jpg" alt="">
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
-								<li><i class="fa fa-user"></i>Gustavo Bogni</li>
+								<li><i class="fa fa-user"></i>Gustavo</li>
 								<li><i class="fa fa-clock-o"></i>1 Ene</li>
 								<li><i class="fa fa-comments"></i>+54 9 3544 616208</li>
 							</ul>
@@ -560,12 +565,73 @@
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
-								<li><i class="fa fa-user"></i>John doe</li>
+								<li><i class="fa fa-user"></i>Leonardo</li>
 								<li><i class="fa fa-clock-o"></i>18 Oct</li>
-								<li><i class="fa fa-comments"></i>57</li>
+								<li><i class="fa fa-comments"></i>+54 9 3544 441442</li>
 							</ul>
 							<h3>CASAS DE FAMILIA</h3>
-							<p>Flia. Torres- Villa de Las Rosas - Traslasierra - Córdoba.</p>
+							<p>Flia. de la Torre- Villa de Las Rosas - Traslasierra - Córdoba.</p>
+							<!-- <a href="blog-single.html">Read more</a> -->
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->
+
+				<!-- blog -->
+				<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive" src="./img/clientes/blog4.jpg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><i class="fa fa-user"></i>Gustavo</li>
+								<li><i class="fa fa-clock-o"></i>1 Ene</li>
+								<li><i class="fa fa-comments"></i>+54 9 3544 616208</li>
+							</ul>
+							<h3>Complejo IPANEMA</h3>
+							<p>Dando todas las comodidades y servicios que usted necesita para vacacionar en familia durante cualquier época del año. A solo dos  cuadras del Río de las Sauces a 6 cuadras de la plaza principal de Nono.</p>
+							<!-- <a href="blog-single.html">Read more</a> -->
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->
+
+				<!-- blog -->
+				<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/clientes/blog5.jpg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><i class="fa fa-user"></i>Juan Roberto García</li>
+								<li><i class="fa fa-clock-o"></i>6 Oct 21</li>
+								<li><i class="fa fa-comments"></i>+54 9 3544 630944</li>
+							</ul>
+							<h3>Yerbacid</h3>
+							<p>Planta industrial de procesado - Traslasierra - Córdoba.</p>
+							<!-- <a href="blog-single.html">Read more</a> -->
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->
+
+				<!-- blog -->
+				<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/clientes/blog6.jpg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><i class="fa fa-user"></i>Carlos</li>
+								<li><i class="fa fa-clock-o"></i>8 Feb</li>
+								<li><i class="fa fa-comments"></i>+54 9 3544 408482</li>
+							</ul>
+							<h3>Cabañas Costa Azul</h3>
+							<p>Abierto TODO EL AÑO * Mina Clavero, provincia de Córdoba. 
+							e-mail cabañascostaazul@gmail.com.</p>
 							<!-- <a href="blog-single.html">Read more</a> -->
 						</div>
 					</div>
@@ -621,7 +687,7 @@
 					<div class="contact">
 						<i class="fa fa-map-marker"></i>
 						<h3>Dirección</h3>
-						<p>Simón Bolivar 2720 (ex 1200), X5889 Mina Clavero</p>
+						<p>X5889 Mina Clavero</p>
 						<p>Córdoba - Argentina</p>
 					</div>
 				</div>
@@ -629,7 +695,7 @@
 
 				<!-- contact form -->
 				<div class="col-md-8 col-md-offset-2">
-					<form class="contact-form">
+					<form action="./php/procesa_susc.php" method = "POST" /class="contact-form">
 						<input type="text" name="name" id="name" class="input" required placeholder="Nombre">
 						<input type="email" name="email" id="email" required placeholder="Correo electrónico">
 						<input type="text" class="input" id="asunto" required placeholder="Asunto/Tema">
@@ -667,14 +733,14 @@
 					<!-- /footer logo -->
 
 					<!-- footer follow -->
-					<ul class="footer-follow">
+					<!-- <ul class="footer-follow">
 						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 						<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 						<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 						<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 						<li><a href="#"><i class="fa fa-youtube"></i></a></li>
-					</ul>
+					</ul> -->
 					<!-- /footer follow -->
 
 					<!-- footer copyright -->
